# lqNotice

./: .gitignore  CMakeLists.txt  README.md
include/: AlertMonitor.h  JsonFetcher.h  MailSender.h
src/: AlertMonitor.cpp  JsonFetcher.cpp  MailSender.cpp  main.cpp
